Bug 478274 - Broken scrolling after closing "Choose application" dialog
Summary: Broken scrolling after closing "Choose application" dialog
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 24.01.80
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6
: 464727 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-12-08 17:32 UTC by Patrick Silva
Modified: 2023-12-15 15:17 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (1.41 MB, video/webm)
2023-12-08 17:58 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-12-08 17:32:42 UTC
STEPS TO REPRODUCE
1. have a folder containing a unknown file and other files
2. try to open the unknown file with double-click
3. close the "Choose application" dialog
4. scroll the files view

OBSERVED RESULT
broken files view. Please watch the attached screen recording. Compact and Details view modes are also affected.

EXPECTED RESULT
the observed result should not occur

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Patrick Silva 2023-12-08 17:58:54 UTC
Created attachment 164019 [details]
screen recording
Comment 2 Bug Janitor Service 2023-12-08 21:49:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-integration/-/merge_requests/124
Comment 3 Nicolas Fella 2023-12-10 23:28:11 UTC
Git commit 92697202ba7f5ff2521fec312711ca4180f604fb by Nicolas Fella.
Committed on 11/12/2023 at 00:26.
Pushed by nicolasfella into branch 'master'.

Don't call winId on a non-window widget

Othewise the UI breaks, and we can't export that window anyway

M  +2    -2    qt6/src/platformtheme/kdeplatformtheme.cpp

https://invent.kde.org/plasma/plasma-integration/-/commit/92697202ba7f5ff2521fec312711ca4180f604fb
Comment 4 Nicolas Fella 2023-12-15 15:17:43 UTC
*** Bug 464727 has been marked as a duplicate of this bug. ***