Don't call winId on a non-window widget

Othewise the UI breaks, and we can't export that window anyway

BUG: 478274